--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,4 +41,8 @@ jobs:
       run: |
        mvn verify sonar:sonar -Dsonar.projectKey=sonar-pp1 -Dsonar.host.url=https://sonarcloud.io/
        sleep 60
+         env:
+
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
